# Orivex-Contracts

./: .gitignore  ARCHITECTURE.md  AUDIT-REPORT.md  CHANGELOG.md  CIRCUIT_BREAKER_TESTING_GUIDE.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  FAQ.md  GLOSSARY.md  GOVERNANCE-PROCESS.md  HOW_TO_TEST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATIONS.md  LICENSE  MIGRATION.md  QUICK_VERIFICATION_GUIDE.md  README.md  README_CIRCUIT_BREAKER.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  _stakevault_get_user_reward_multipl.md  course_completion_payout_audit.md  deny.toml  package.json  supa_solution.js
contracts/badge-nft/: Cargo.toml  Makefile  README.md
contracts/badge-nft/src/: invariants.rs  lib.rs  test.rs  types.rs
contracts/badge-nft/test_snapshots/test/: test_badge_estimated_footprint_one_per_holder.1.json  test_badge_estimated_footprint_unaffected_by_revoke.1.json  test_badge_migrate_v0_to_v1_preserves_badges.1.json  test_badge_migrate_v0_to_v1_sets_version.1.json  test_get_badge_count_increments.1.json  test_get_badges_comprehensive.1.json  test_has_badge_multiple_badges.1.json  test_has_badge_returns_false_for_other_courses.1.json  test_initialize_success.1.json  test_mint_badge_emits_event.1.json  test_mint_badge_increments_badge_count.1.json  test_mint_badge_multiple_courses_same_learner.1.json  test_mint_badge_multiple_learners_same_course.1.json  test_mint_badge_without_auth_succeeds_with_mock.1.json  test_revoke_badge_emits_event.1.json  test_revoke_badge_success.1.json  test_revoke_badge_unauthorized_caller.1.json
contracts/common/: Cargo.toml
contracts/common/src/: auth.rs  constants.rs  errors.rs  lib.rs  ttl_audit_test.rs  two_step.rs  types.rs
contracts/course-registry/: Cargo.toml  README.md
contracts/course-registry/src/: invariants.rs  lib.rs  test.rs  types.rs
contracts/course-registry/test_snapshots/test/: test_badge_minted_for_different_courses_same_learner.1.json  test_badge_minted_for_multiple_learners_independently.1.json  test_badge_minted_on_final_module_completion.1.json  test_badge_not_minted_on_intermediate_module.1.json  test_complete_course_pays_custom_reward.1.json  test_complete_course_triggers_reward_distribution.1.json  test_complete_course_zero_reward_skips_payout.1.json  test_complete_module_different_learners.1.json  test_complete_module_emits_event.1.json  test_complete_module_exceeds_total_modules.1.json  test_complete_module_increments_progress.1.json  test_complete_module_multiple_times.1.json  test_complete_module_unauthorized_verifier.1.json  test_complete_module_without_badge_nft_configured_does_not_panic.1.json  test_contract_version_after_migration.1.json  test_course_count_increments.1.json  test_course_created_event_emitted.1.json  test_create_and_get_course.1.json  test_create_course_negative_reward_panics.1.json  test_create_course_returns_id_one.1.json  test_enroll_multiple_learners_same_course.1.json  test_enroll_same_learner_different_courses.1.json  test_enroll_success.1.json  test_estimated_footprint_tracks_courses_and_enrolments.1.json  test_full_learner_journey_mints_badge_pays_reward_and_weights_governance_vote.1.json  test_get_course_reward_nonexistent_panics.1.json  test_get_progress_returns_zero_after_enroll.1.json  test_get_progress_returns_zero_initially.1.json  test_get_progress_tracks_completion.1.json  test_is_course_finished_exact_progress_returns_true.1.json  test_is_course_finished_excess_progress_returns_true.1.json  test_is_course_finished_partial_progress_returns_false.1.json  test_migrate_v0_to_v1_preserves_course_data.1.json  test_migrate_v0_to_v1_preserves_progress_data.1.json  test_multiple_courses.1.json  test_multiple_learners_get_independent_rewards.1.json  test_reward_distributed_only_on_final_module.1.json  test_reward_not_distributed_if_reward_pool_not_set.1.json  test_reward_not_distributed_without_whitelist.1.json  test_set_course_reward_enables_payout_on_zero_course.1.json  (+18 more)
contracts/governance/: Cargo.toml  README.md
contracts/governance/src/: invariants.rs  lib.rs  test.rs  types.rs
contracts/governance/test_snapshots/test/: test_cancel_proposal_already_executed_panics.1.json  test_cancel_proposal_prevents_voting.1.json  test_cast_vote_prevents_double_voting.1.json  test_cast_vote_uses_badge_count_as_weight.1.json  test_execute_proposal_already_executed.1.json  test_execute_proposal_emits_event.1.json  test_execute_proposal_rejected.1.json  test_execute_proposal_success.1.json  test_execute_proposal_tied_vote.1.json  test_execute_proposal_voting_still_active.1.json  test_governance_cast_vote_increments_footprint.1.json  test_governance_contract_version_initial_zero.1.json  test_governance_create_proposal_increments_footprint.1.json  test_governance_estimated_footprint_initial_zero.1.json  test_governance_migrate_twice_panics.1.json  test_governance_migrate_unauthorized_panics.1.json  test_governance_migrate_v0_to_v1_preserves_proposals.1.json  test_governance_migrate_v0_to_v1_sets_version.1.json  test_governance_sweep_storage_non_admin_panics.1.json  test_governance_sweep_storage_noop_when_flag_false.1.json  test_governance_sweep_storage_removes_executed_proposal.1.json
contracts/hello-learnault/: Cargo.toml
contracts/hello-learnault/src/: lib.rs  test.rs
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/src/: lib.rs
contracts/stake-vault/: Cargo.toml  README.md
contracts/stake-vault/src/: invariants.rs  lib.rs  test.rs  types.rs
contracts/stake-vault/test_snapshots/test/: test_stake_resets_lock_timestamp.1.json  test_stake_transfers_and_accumulates.1.json  test_stake_vault_footprint_decrements_on_unstake.1.json  test_stake_vault_footprint_increments_on_new_staker.1.json  test_stake_vault_footprint_initial_zero.1.json  test_stake_vault_migrate_twice_panics.1.json  test_stake_vault_migrate_unauthorized_panics.1.json  test_stake_vault_migrate_v0_to_v1_preserves_stakes.1.json  test_stake_vault_migrate_v0_to_v1_sets_version.1.json  test_unstake_succeeds_after_lock.1.json  (+3 more)
(+98 files in other folders)
