[workspace]
members = [
    "course-registry",
    "quest-engine",
    "reward-pool",
    "badge-nft",
    "governance",
    "stake-vault",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "23"
ethnum = "1.6.0"

[patch.crates-io]
ethnum = { version = "1.6.0" }

[profile.release]
overflow-checks = true
