[workspace]
members = [
    "contracts/common",
    "contracts/course-registry",
    "contracts/quest-engine",
    "contracts/reward-pool",
    "contracts/badge-nft",
    "contracts/governance",
    "contracts/stake-vault",
    "contracts/integration-tests",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "23"

[profile.release]
overflow-checks = true
