[package]
name = "badge-nft"
version = "0.1.0"
edition = "2021"
authors = ["Learnault Team"]
description = "Soulbound badge NFT contract for the Learnault platform"
license = "MIT"
repository = "https://github.com/your-org/learnault-contracts"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[features]
# `contract` enables the #[contract]/#[contractimpl] wasm export shims.
# Must be passed explicitly when building the standalone wasm artifact.
# Dependents (e.g. course-registry) must NOT enable this feature to avoid
# duplicate symbol errors at link time.
contract = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
