[package]
name = "badge-nft"
version = "0.1.0"
edition = "2021"
authors = ["Orivex Team"]
description = "Soulbound badge NFT contract for the Orivex platform"
license = "MIT"
repository = "https://github.com/Kqirox/orivex-contracts"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
