[package]
name = "course-registry"
version = "0.1.0"
edition = "2021"
authors = ["Learnault Team"]
description = "Course registry contract for the Learnault platform"
license = "MIT"
repository = "https://github.com/your-org/learnault-contracts"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
# default-features = false ensures the `contract` feature is NOT enabled,
# so badge-nft's wasm export shims are excluded and won't clash at link time.
badge-nft = { path = "../badge-nft", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Tests need `contract` (for env.register(BadgeNFT, ())) and `testutils`.
badge-nft = { path = "../badge-nft", default-features = false, features = ["contract", "testutils"] }
