[package]
name = "stake-vault"
version = "0.1.0"
edition = "2021"
authors = ["Orivex Team"]
description = "Stake vault contract for the Orivex platform"
license = "MIT"
repository = "https://github.com/Kqirox/orivex-contracts"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
contracts-common = { path = "../common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
