[package]
name = "stake-vault"
version = "0.1.0"
edition = "2021"
authors = ["Orivex Team"]
description = "Stake vault contract for the Orivex platform"
license = "MIT"
repository = "https://github.com/Kqirox/orivex-contracts"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[features]
default = ["contract"]
contract = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
contracts-common = { path = "../common", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
contracts-common = { path = "../common" }
